[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A set of 5 simple console games"
authors = ["Igor Loskutov <omfi017@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"] 
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
